# gemini-code

./: INSTALL.md  README.md  brainstorm.md  install.sh  push_to_github.sh  pyproject.toml
src/gemini_cli/: __init__.py  config.py  main.py  utils.py
src/gemini_cli/models/: __init__.py  gemini.py
src/gemini_cli/tools/: __init__.py  base.py  directory_tools.py  file_tools.py  quality_tools.py  summarizer_tool.py  system_tools.py  task_complete_tool.py  test_runner.py  tree_tool.py  web_tools.py
src/gemini_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_dir/: test.py
